--- a/open_trails/templates/dataset-01-upload-segments.html
+++ b/open_trails/templates/dataset-01-upload-segments.html
@@ -70,7 +70,7 @@
     <div class="slab-gray">
         <div class="layout-semibreve">
             <div class="badge-heading badge-blue">
-                <h3 class="h3 badge-heading-h3-fix">First: Upload your trail data.</h3>
+                <h3 class="h3 badge-heading-h3-fix">First: Upload your trail segment shapefile.</h3>
             </div>
             <form action="/datasets/{{ dataset.id }}/upload" method=post enctype=multipart/form-data>
             <p>
