--- a/open_trails/templates/dataset-02-show-sample-segment.html
+++ b/open_trails/templates/dataset-02-show-sample-segment.html
@@ -66,11 +66,15 @@
             <br>opentrails.zip</small></li>
     </ol>
 
-
+    <div class="alert-success">
+        <section class="layout-semibreve">
+            <p><b>Success!</b> You uploaded a valid shapefile.</p>
+        </section>
+    </div>
     <div class="slab-gray">
         <section class="layout-semibreve">
             <div class="badge-heading badge-blue">
-                <h3 class="badge-heading-h3-fix">Next: Review and convert your data.</h3>
+                <h3 class="badge-heading-h3-fix">Next: Review and convert your segment data.</h3>
             </div>
             <form action="/datasets/{{ dataset.id }}/transform-segments" method=post>
                 <p>
@@ -80,10 +84,9 @@
         </section>
     </div>
     <section class="layout-semibreve">
-        <h4>Review your uploaded data.</h4>
-        <p>You've uploaded a shapefile that contains the data we need to get started with the conversion.</p>
+        <h4>Review the shapefile you've uploaded.</h4>
 
-        <p>Before we move forward, review the sample data below. We've included all of the field names from the data you uploaded, along with a few sample values. Here are a couple of questions to keep in mind:</p>
+        <p>Before we move forward, review this sample of the data you've uploaded. We've included all of the field names from the shapefile, along with a few sample values. Here are a couple of questions to keep in mind:</p>
         <ul>
             <li>Do the segments contain the name of the trail they are a part of? Names are used to group segments into full trails.</li>
             <li>Do the segments have attributes describing appropriate or allowed use? These fields are not required, but are recommended.</li>
@@ -96,7 +99,7 @@
         <table id="original-sample">
             <thead>
                 <tr>
-                    <th colspan="5">A Sample of Your Data</th>
+                    <th colspan="5">A Sample of Your Segment Data</th>
                 </tr>
 
             </thead>
