--- a/open_trails/templates/dataset-08-transformed-trailheads.html
+++ b/open_trails/templates/dataset-08-transformed-trailheads.html
@@ -33,15 +33,15 @@
     {% include "headline-converter.html" %}
     <div class="layout-semibreve semibreve-reduced">
         <div class="file-titles"  id="trailsegments-title">
-            <h4 class="current-file-title">Trail Segments</h4>
+            <h5 class="current-file-title">Trail Segments</h4>
             <h6 class="file-status-success">Complete</h6>
         </div>
         <div class="file-titles" id="trailheads-title">
-            <h4 class="other-file-title">Trailheads</h4>
+            <h5 class="current-file-title">Trailheads</h4>
             <h6 class="file-status-success">Complete</h6>
         </div>
         <div class="file-titles" id="areas-title">
-            <h4 class="other-file-title">Areas</h4>
+            <h5 class="other-file-title">Areas</h4>
             <h6 class="coming-soon">Coming Soon</h6>
         </div>
     </div>
@@ -67,6 +67,11 @@
     </ol>
 
     {% if transform_succeeded %}
+    <div class="alert-success">
+        <section class="layout-semibreve">
+            <p><b>Success!</b> We transformed your trailheads shapefile to "trailheads.geojson".</p>
+        </section>
+    </div>
     <div class="slab-gray">
         <section class="layout-semibreve">
             <div class="badge-heading">
@@ -84,10 +89,8 @@
         </section>
     </div>
     <section class="layout-semibreve">
-        <h4>Review what's changed.</h4>
-        <p>We were able to successfully transform the data you provided into <code>trail_segments.geojson</code>, an OpenTrails conformant file describing the geometry of your trail segments.</p>
-
-        <p>Review the sample data below (and compare it to your original, if you like), then let's move forward to the next step: extracting "named trails" from your segments, into a seperate file called <code>named_trails.csv</code>.</p>
+        <h4>Review the transformation.</h4>
+        <p>We were able to successfully transform the data you provided into <code>trailheads.geojson</code>, an OpenTrails conformant file describing the geometry of your trailheads.</p>
 
         <p>Every conversion to OpenTrails is different. Below you'll find warnings and error messages that reveal how we are handling the conversion process.</p> 
 
@@ -113,7 +116,7 @@
         <table id="transformed-sample">
             <thead>
                 <tr>
-                    <th colspan="10">Sample Transformed Segment Data</th>
+                    <th colspan="10">Sample Transformed Trailhead Data</th>
                 </tr>
             </thead>
             <tbody>
@@ -139,7 +142,7 @@
         <table id="original-sample">
             <thead>
                 <tr>
-                    <th colspan="5">Sample Segment Data</th>
+                    <th colspan="5">Sample Original Trailhead Data</th>
                 </tr>
             </thead>
             <tbody>
