added links to Guidance for Preparing Shapefiles, improved copy across conversion flow

--- a/open_trails/templates/dataset-02-show-sample-segment.html
+++ b/open_trails/templates/dataset-02-show-sample-segment.html
@@ -89,9 +89,13 @@
         <p>Before we move forward, review this sample of the data you've uploaded. We've included all of the field names from the shapefile, along with a few sample values. Here are a couple of questions to keep in mind:</p>
         <ul>
             <li>Do the segments contain the name of the trail they are a part of? Names are used to group segments into full trails.</li>
-            <li>Do the segments have attributes describing appropriate or allowed use? These fields are not required, but are recommended.</li>
+            <li>Do the segments have attributes describing appropriate or allowed use? These fields are not required, but are recommended; we want to help visitors enjoy your trail system safely!</li>
         </ul>
     </section>
+
+                <h4>Looking for more guidance?</h4>
+            <p>If you are unsure as to whether your shapefile will be succesffuly transformed using this converter, please refer to this <a href="https://docs.google.com/a/codeforamerica.org/document/d/1tZQRaHh76dP-t2_KhMR9zT2DktuOGwRjCAfvHU9_Tpg/edit">Guidance for Preparing Shapefile data.</a></p>
+            <p>Of course, it can also be helpful to refer to the <a href="https://docs.google.com/a/codeforamerica.org/document/d/1KF8KAio-SqGHhh9oFY_KjfwIi3PePOHg7KfTSPh27fc/edit">Technical Draft of the OpenTrails Specification</a> itself.</p>
 
     <div class="primary-content-line"></div>
 
