--- a/open_trails/templates/dataset-05-stewards.html
+++ b/open_trails/templates/dataset-05-stewards.html
@@ -84,3 +84,18 @@
             <small>Note: data uploads make take a minute on poor connections.</small>
         </div>
     </div>
+    <div class="layout-semibreve">
+        <h4>ZIP up your shapefile</h4>
+        <p>Upload a <b>zipped</b> shapefile that describes your trail system. This data should be a 'polyline' shapefile of features that represent the actual paths your trails take.</p>
+        <ul>
+            <p>As you probably know, a "shapefile" is actually a set of several files. To use this converter, we require the following files be included in a single zipped upload:</p>
+            <li>.shp</li>
+            <li>.shx</li>
+            <li>.dbf</li>
+            <li>.prj</li>
+        </ul>
+        <br>
+        <h4>Looking for more guidance?</h4>
+        <p>If you are unsure as to whether your shapefile will be succesffuly transformed using this converter, please refer to this <a href="https://docs.google.com/a/codeforamerica.org/document/d/1tZQRaHh76dP-t2_KhMR9zT2DktuOGwRjCAfvHU9_Tpg/edit">Guidance for Preparing Shapefile data.</a></p>
+        <p>Of course, it can also be helpful to refer to the <a href="https://docs.google.com/a/codeforamerica.org/document/d/1KF8KAio-SqGHhh9oFY_KjfwIi3PePOHg7KfTSPh27fc/edit">Technical Draft of the OpenTrails Specification</a> itself.</p>
+    </div>
