--- a/open_trails/templates/dataset-07-show-sample-trailhead.html
+++ b/open_trails/templates/dataset-07-show-sample-trailhead.html
@@ -84,7 +84,7 @@
     </div>
     <section class="layout-semibreve">
         <h4>Review your uploaded data.</h4>
-        <p>You've uploaded a shapefile that contains the data we need to get started with the conversion.</p>
+        <p>You've uploaded a shapefile that contains the point data we need to get started with the conversion.</p>
 
         <p>Before we move forward, review the sample data below. We've included all of the field names from the data you uploaded, along with a few sample values.</p>
     </section>
