--- a/open_trails/templates/dataset-08-transformed-trailheads.html
+++ b/open_trails/templates/dataset-08-transformed-trailheads.html
@@ -89,14 +89,14 @@
         </section>
     </div>
     <section class="layout-semibreve">
-        <h4>Review the transformation.</h4>
+        <h4>Review the trailhead transformation.</h4>
         <p>We were able to successfully transform the data you provided into <code>trailheads.geojson</code>, an OpenTrails conformant file describing the geometry of your trailheads.</p>
 
         <p>Every conversion to OpenTrails is different. Below you'll find warnings and error messages that reveal how we are handling the conversion process.</p> 
 
         <p>For more information, click on the link in each message. You'll find a more detailed explanation, along with a reference to the relevant section of the Open Trail System Specification.</p>
 
-        <p>Still have questions? We're available to help.</p>
+        <p>You can review your entire OpenTrails data set by downloading the zipfile reference above.</p>
     </section>
     <div class="primary-content-line"></div>
     {% else %}
