--- a/open_trails/templates/error-not-zip.html
+++ b/open_trails/templates/error-not-zip.html
@@ -41,7 +41,7 @@
 	    </div>
 		<section class="layout-semibreve">
 			<h3>Try again!</h3>
-            <p>Upload a <b>zipped</b> shapefile that describes your trail system. This data should be a 'polyline' shapefile of features that represent the actual paths your trails take.</p>
+            <p>Hit the back button, then upload a <b>zipped</b> shapefile that describes your trail system. This data should be a 'polyline' shapefile of features that represent the actual paths your trails take.</p>
             <ul>
                 <p>As you probably know, a "shapefile" is actually a set of several files. To use this converter, we require the following files be included in a single zipped upload:</p>
                 <li>.shp</li>
