--- a/open_trails/templates/dataset-01-upload-segments.html
+++ b/open_trails/templates/dataset-01-upload-segments.html
@@ -94,6 +94,10 @@
                 <li>.dbf</li>
                 <li>.prj</li>
             </ul>
+            <br>
+            <h4>Looking for more guidance?</h4>
+            <p>If you are unsure as to whether your shapefile will be succesffuly transformed using this converter, please refer to this <a href="https://docs.google.com/a/codeforamerica.org/document/d/1tZQRaHh76dP-t2_KhMR9zT2DktuOGwRjCAfvHU9_Tpg/edit">Guidance for Preparing Shapefile data.</a></p>
+            <p>Of course, it can also be helpful to refer to the <a href="https://docs.google.com/a/codeforamerica.org/document/d/1KF8KAio-SqGHhh9oFY_KjfwIi3PePOHg7KfTSPh27fc/edit">Technical Draft of the OpenTrails Specification</a> itself.</p>
         </div>
         <div class="layout-minim">
             <h4>What we expect from your data</h4>
