updated 'success' message after stewards.csv creation

--- a/open_trails/templates/dataset-05-stewards.html
+++ b/open_trails/templates/dataset-05-stewards.html
@@ -67,7 +67,7 @@
 
     <div class="alert-success">
         <section class="layout-semibreve">
-            <p><b>Success!</b> We transformed your trail segment shapefile to "trail_segments.geojson".</p>
+            <p><b>Success!</b> You've created a stewards.csv file.</p>
         </section>
     </div>
     <div class="slab-gray">
