--- a/open_trails/templates/dataset-05-stewards.html
+++ b/open_trails/templates/dataset-05-stewards.html
@@ -81,6 +81,9 @@
                 <input type=submit value=Upload>
             </p>
             </form>
+            <form action="/datasets/{{ dataset.id }}/no-trailheads" method=post>
+                <input type=submit value=Skip>
+            </form>
             <small>Note: data uploads make take a minute on poor connections.</small>
         </div>
     </div>
