updated alert style and placement, and 'skip trailheads' button

--- a/open_trails/static/css/app.css
+++ b/open_trails/static/css/app.css
@@ -43,14 +43,14 @@
 .cta-form {
   display: inline-block;
 }
+
 .cta-button {
   display: inline-block;
 }
 
 .alert-success {
   display: inline-block;
-  float: right;
-  margin: 0;
+  margin: 1em 0;
   padding: 0.725rem;
 }
 
