--- a/open_trails/templates/dataset-03-transformed-segments.html
+++ b/open_trails/templates/dataset-03-transformed-segments.html
@@ -69,13 +69,11 @@
 
 
     {% if transform_succeeded %}
-    <div class="alert-success">
-        <section class="layout-semibreve">
-            <p><b>Success!</b> We transformed your trail segment shapefile to "trail_segments.geojson".</p>
-        </section>
-    </div>
     <div class="slab-gray">
         <div class="layout-semibreve">
+            <div class="alert-success">
+                <b>Success!</b> We transformed your trail segment shapefile to "trail_segments.geojson".
+            </div>
             <div class="badge-heading badge-blue">
                 <h3 class="badge-heading-h3-fix">Next: Extract "named trails" into a CSV.</h3>
             </div>
