--- a/open_trails/templates/dataset-04-named-trails.html
+++ b/open_trails/templates/dataset-04-named-trails.html
@@ -67,14 +67,12 @@
             <br>opentrails.zip</small></li>
     </ol>
 
-    <div class="alert-success">
-        <section class="layout-semibreve">
-            <p><b>Success!</b> We created a "named_trails.csv" file from your trail segment data.</p>
-        </section>
-    </div>
     <div class="slab-gray">
         <section class="layout-chimney-invert">
             <div class="layout-minim">
+                <div class="alert-success">
+                    <b>Success!</b> We created a "named_trails.csv" file from your trail segment data.
+                </div>
                 <div class="badge-heading badge-blue">
                     <h3>Next: Create your stewards.csv file.</h3>
                 </div>
