one last success alert restyling

--- a/open_trails/templates/dataset-07-show-sample-trailhead.html
+++ b/open_trails/templates/dataset-07-show-sample-trailhead.html
@@ -51,13 +51,11 @@
             <br>opentrails.zip</small></li>
     </ol>
 
-    <div class="alert-success">
-        <section class="layout-semibreve">
-            <p><b>Success!</b> You uploaded a valid trailhead shapefile.</p>
-        </section>
-    </div>
     <div class="slab-gray">
         <section class="layout-semibreve">
+            <div class="alert-success">
+                <b>Success!</b> You uploaded a valid trailhead shapefile.
+            </div>
             <div class="badge-heading badge-blue">
                 <h3 class="badge-heading-h3-fix">Next: Review and convert your trailhead data.</h3>
             </div>
