updated success alert layout on last converter page, targeted alert styles more precisely

--- a/open_trails/static/css/app.css
+++ b/open_trails/static/css/app.css
@@ -48,7 +48,7 @@
   display: inline-block;
 }
 
-.alert-success {
+.slab-gray .alert-success {
   display: inline-block;
   margin: 1em 0;
   padding: 0.725rem;
