--- a/open_trails/templates/dataset-08-transformed-trailheads.html
+++ b/open_trails/templates/dataset-08-transformed-trailheads.html
@@ -53,13 +53,11 @@
     </ol>
 
     {% if transform_succeeded %}
-    <div class="alert-success">
-        <section class="layout-semibreve">
-            <p><b>Success!</b> We transformed your trailheads shapefile to "trailheads.geojson".</p>
-        </section>
-    </div>
     <div class="slab-gray">
         <section class="layout-semibreve">
+            <div class="alert-success">
+                <b>Success!</b> We transformed your trailheads shapefile to "trailheads.geojson".
+            </div>
             <div class="badge-heading">
                 <h3 class="badge-heading-h3-fix">Download your data in OpenTrails!</h3>
             </div>
